# ALICE

./: .gitignore  ALICE_Installer.iss  LICENSE  Launch_ALICE.bat  README.md  alice_memory.db  chat_log.txt  config.yaml  diagnostics.py  fetch_proxy.py  fetch_skill.py  folder_structure.txt  main.py  memory.txt  osc_backend.py  pyproject.toml  requirements.txt  requirements_osc.txt  research.md  run.py  runtime.bat  setup_env.bat  skills-lock.json  tech_stack_summary.md  test.py  test_audio_choose.py  test_cam.py  testspeaker.py  tts.py  webui.py
LLM_process/: llm.py
UnityClient/Assets/Scripts/: OSCReceiver.cs  TransparentWindow.cs  VRMController.cs
assets/tts/: voice_catalog.json
assets/tts/base_voices/: metadata.json
assets/tts/voice_samples/: voiceline.txt
config/: system.yaml
config/identity/: character.yaml
core/: event_bus.py  hardware_hal.py  orchestrator.py
interfaces/: avatar_websocket.py  discord_bot.py  local_mic_speaker.py
mcp_servers/schedule/: server.py
memory/: log_memory.py  memory_manager.py  seal_engine.py
memory/vector_db/: chroma_store.py
modules/brain/: local_llm.py  remote_llm.py
modules/ears/: whisper_stt.py
modules/eyes/: camera_feed.py  screen_parser.py
modules/voice/: fallback_tts.py  kokoro_tts.py
server/: app.py  main_webui.py
server/routes/: chat.py  config.py  market.py  mcp.py
subsystems/gaming/: api_agent.py  motor_agent.py  nav_agent.py
subsystems/iot/: home_assistant.py  web_search.py
test_audio/: test_audio_choose.py  testspeaker.py
tests/: test_memory_layers.py
tools/: audio_output.py  auto_compress.py  auto_threehold.py  detect_cuda.py  download_voices.py  home_assistant.py  language_detector.py  load_config.py  mcp_client.py  memory_debugger.py  vision.py  vmc_controller.py  voice_profiler.py  voice_webui.py  web_search.py
tools/training/: alice_dataset.jsonl  alice_distilled_dataset.jsonl  alice_unsloth_dataset.csv  csv_converter.py  data.csv  dataset_builder.py  qlora_trainer.py  training_manager.py  validation.csv
tools/training/LoRA/: README.md  adapter_config.json  tokenizer_config.json
voice_process/: stt.py  tts.py
webui/: app.py  emotion_recognizer.js  headless.html  index.html  motion_controller.js  script.js  style.css  vpet.html  webui_mode.html  webui_mode_backup.html
webui/js/: main.js
webui/js/core/: emotion_recognizer.js  event_bus.js  fsm.js  loadMixamoAnimation.js  motion_controller.js  vrm_ik_dragger.js
webui/js/core/motion/: expression_controller.js  gaze_controller.js  gesture_controller.js  head_controller.js  lipsync_controller.js  motion_config.js  posture_controller.js
webui/js/renderers/: live2d_renderer.js  visual_manager.js  vrm_renderer.js
webui/js/services/: audio_service.js  socket_service.js  webrtc_service.js
webui/js/ui/: avatar_loader.js  ui_controller.js
webui/static/: index.html
