[project]
name = "alice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpt-sovits-python>=1.0.0",
    "keyboard>=0.13.5",
    "langsegment",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "ollama>=0.3.3",
    "openai-whisper>=20250625",
    "pyaudio>=0.2.14",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "transformers==4.46.3",
]

[tool.uv.sources]
langsegment = { git = "https://github.com/chameleon-ai/LangSegment-0.3.5-backup.git" }
