[project]
name = "alice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncddgs>=0.1.0a1",
    "asyncio>=4.0.0",
    "chromadb>=1.5.9",
    "davey>=0.1.5",
    "discord-py>=2.7.1",
    "duckduckgo-search>=8.1.1",
    "edge-tts>=7.2.8",
    "fastapi>=0.128.1",
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gpt-sovits-python>=1.0.0",
    "gradio>=6.14.0",
    "keyboard>=0.13.5",
    "kokoro>=0.9.4",
    "langsegment",
    "librosa>=0.11.0",
    "llama-cpp-python>=0.3.23",
    "matplotlib>=3.10.9",
    "mss>=10.2.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "ollama>=0.3.3",
    "openai>=1.39.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.20.1",
    "transformers==4.46.3",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[tool.uv.sources]
langsegment = { git = "https://github.com/chameleon-ai/LangSegment-0.3.5-backup.git" }
