[project]
name = "alice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "duckduckgo-search>=8.1.1",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gpt-sovits-python>=1.0.0",
    "hifi-gan>=0.0.2",
    "keyboard>=0.13.5",
    "langdetect>=1.0.9",
    "langsegment",
    "librosa>=0.11.0",
    "llama-cpp-python>=0.3.21",
    "matplotlib>=3.10.9",
    "mss>=10.2.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "ollama>=0.3.3",
    "openai-whisper>=20250625",
    "openwakeword>=0.6.0",
    "opencv-python>=4.13.0.92",
    "peft>=0.19.1",
    "phonemizer>=3.3.0",
    "pyaudio>=0.2.14",
    "python-osc>=1.10.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "transformers==4.46.3",
    "trl>=0.17.0",
    "underthesea>=9.4.0",
]

[tool.uv.sources]
langsegment = { git = "https://github.com/chameleon-ai/LangSegment-0.3.5-backup.git" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
